--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             
         }
 
-        body {
+/*         body {
             background-image: linear-gradient(
 				to bottom,
 				rgb(240, 28, 70) 0%,
@@ -28,7 +28,10 @@
 			);	
            
         }
-
+ */     body {
+            background-color: #e0b7ba;
+        }
+	
         .box-wrap {
             width: 500px;
             margin: 20px auto;
